orchestracommunity/objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Area for the service tech to input a note about the work related to the time entry.</description>
        <inlineHelpText>Area for the service tech to input a note about the work related to the time entry.</inlineHelpText>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Tech that is related to this time entry record.</description>
        <inlineHelpText>Service Tech that is related to this time entry record.</inlineHelpText>
        <label>Service Tech</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <description>Total time calculated by workflow between the start and stop time for the time entry record.</description>
        <inlineHelpText>Total time calculated by workflow between the start and stop time for the time entry record.</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Event__c</fullName>
        <description>Work Event record this time entry is associated with.</description>
        <inlineHelpText>Work Event record this time entry is associated with.</inlineHelpText>
        <label>Work Event</label>
        <referenceTo>Work_Event__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Work_Start_Date_Time__c</fullName>
        <label>Work Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Stop_Date_Time__c</fullName>
        <label>Work Stop Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{00000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>